<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/addPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takeOwnPhoto"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <ImageView
        android:id="@+id/userPhoto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.5"
        android:src="@drawable/noimage" />
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="0"
        android:orientation="vertical" >
        <Button
            android:id="@+id/takePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="takePhoto"
            android:text="@string/take_photo" />
        <Button
            android:id="@+id/sendPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sendPhoto"
            android:text="@string/send_photo" />
    </LinearLayout>
</LinearLayout>