<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5" >
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/addRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addRating"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                android:id="@+id/dishName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dish Name"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/ratingAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <EditText
                    android:id="@+id/ratingAuthorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="optional"
                    android:lines="1" />
                <TextView
                    android:id="@+id/amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dishAmount"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <RatingBar
                    android:id="@+id/myAmountRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:rating="0"
                    android:stepSize="1" />
                <TextView
                    android:id="@+id/spiciness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dishSpiciness"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <RatingBar
                    android:id="@+id/mySpicinessRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:rating="0"
                    android:stepSize="1" />
                <TextView
                    android:id="@+id/appearence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dishAppearence"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <RatingBar
                    android:id="@+id/myAppearenceRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:rating="0"
                    android:stepSize="1" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/addMyRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="0.0"
        android:onClick="addRating"
        android:text="@string/addRating" />
</LinearLayout>