<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/SingleDishLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:id="@+id/innerSingleDishLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/dish_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Dish Name"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <LinearLayout
                android:id="@+id/priceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >
                <TextView
                    android:id="@+id/price_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Price Student"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <TextView
                    android:id="@+id/price_employee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Price Employee"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/dishPhotoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" >
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <LinearLayout
                    android:id="@+id/ratingLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >
                    <TextView
                        android:id="@+id/amountText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dishAmount"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <RatingBar
                        android:id="@+id/amountRating"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:stepSize="0.5" />
                    <TextView
                        android:id="@+id/spicinessText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dishSpiciness"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <RatingBar
                        android:id="@+id/spicinessRating"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:stepSize="0.5" />
                    <TextView
                        android:id="@+id/appearenceText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dishAppearence"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                    <RatingBar
                        android:id="@+id/appearenceRating"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:stepSize="0.5" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ingredients_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:orientation="vertical"
                    android:paddingLeft="20dp" >
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="vertical" >
                <Button
                    android:id="@+id/addRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="addRating"
                    android:text="@string/addRating" />
                <Button
                    android:id="@+id/showComments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="showComments"
                    android:text="@string/show_comments" />
                <Button
                    android:id="@+id/showPhotos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="showPhotos"
                    android:text="@string/show_photos" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>